--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 	</head>
@@ -45,9 +46,12 @@
 								skill that can make a positive impact on the
 								world. I'm always learning new ways to improve my skills and love working with smart
 								people. <p/><p> Let's make this world great!</p>
+								<div class='about-links'>
+									Github LinkedIn
+								</div>
 						</div>
 						<div class="6u$ 12u$(medium) important(medium)">
-							<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
+							<span class="image fit"><img  class='pro-pic' src="images/profile.jpg" alt="" /></span>
 						</div>
 					</div>
 				</div>
@@ -64,12 +68,21 @@
 						</div>
 						<div class="6u 12u$(medium) skills">
 							<ul class="major-icons">
-								<li><span class="icon style1 major fa-code"></span></li>
+								<!-- <li><span class="icon style1 major fa-code"></span></li>
 								<li><span class="icon style2 major fa-bolt"></span></li>
 								<li><span class="icon style3 major fa-camera-retro"></span></li>
 								<li><span class="icon style4 major fa-cog"></span></li>
 								<li><span class="icon style5 major fa-desktop"></span></li>
-								<li><span class="icon style6 major fa-calendar"></span></li>
+								<li><span class="icon style6 major fa-calendar"></span></li> -->
+								<li><i class="devicon-react-original colored myicon"></i><br>React</li>
+								<li class='skill-icon'><i class="devicon-javascript-plain colored myicon"></i><br>JavaScript</li>
+								<li class='skill-icon'><i class="devicon-ruby-plain colored myicon"></i><br>Ruby</li>
+								<li class='skill-icon'><i class="devicon-rails-plain colored myicon"></i><br>Rails</li>
+								<li class='skill-icon'><i class="devicon-postgresql-plain colored myicon"></i><br>PostgreSQL</li>
+								<li class='skill-icon'><i class="devicon-jquery-plain colored myicon"></i><br>jQuery</li>
+								<li class='skill-icon'><i class="devicon-html5-plain colored myicon"></i><br>HTML5 + Canvas</li>
+								<li class='skill-icon'><i class="devicon-css3-plain colored myicon"></i><br>CSS3</li>
+								<li class='skill-icon'><i class="devicon-heroku-plain myicon"></i><br>heroku</li>
 							</ul>
 						</div>
 					</div>
@@ -80,29 +93,29 @@
 			<section id="three" class="main style1 special">
 				<div class="container">
 					<header class="major">
-						<h2>Adipiscing amet consequat</h2>
+						<h2>Projects</h2>
 					</header>
-					<p>Ante nunc accumsan et aclacus nascetur ac ante amet sapien sed.</p>
+					<!-- <p>Ante nunc accumsan et aclacus nascetur ac ante amet sapien sed.</p> -->
 					<div class="row 150%">
 						<div class="4u 12u$(medium)">
 							<span class="image fit"><img src="images/pic02.jpg" alt="" /></span>
-							<h3>Magna feugiat lorem</h3>
-							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
+							<h3>ExtraLarge</h3>
+							<p>Single page web application that allows users to read and publish content. Built with Rails, React, Redux, Javascript, and PostgreSQL.</p>
 							<ul class="actions">
 								<li><a href="#" class="button">More</a></li>
 							</ul>
 						</div>
 						<div class="4u 12u$(medium)">
 							<span class="image fit"><img src="images/pic03.jpg" alt="" /></span>
-							<h3>Magna feugiat lorem</h3>
-							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
+							<h3>Shoot-10</h3>
+							<p>Interactive shooter with one objective: Kill as many ships as possible with 10 bullets. Built with Javascript and HTML5 Canvas.</p>
 							<ul class="actions">
 								<li><a href="#" class="button">More</a></li>
 							</ul>
 						</div>
 						<div class="4u$ 12u$(medium)">
 							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-							<h3>Magna feugiat lorem</h3>
+							<h3>Ruby Record</h3>
 							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
 							<ul class="actions">
 								<li><a href="#" class="button">More</a></li>
@@ -449,9 +462,9 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 		<!-- Footer -->
 			<section id="footer">
 				<ul class="icons">
-					<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
+					<!-- <li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
 					<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-					<li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+					<li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li> -->
 					<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
 					<li><a href="#" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
