--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 						<div class="4u 12u$(medium)">
 							<span class="image fit"><img src="images/pic03.jpg" alt="" /></span>
 							<h3>Shoot-10</h3>
-							<p>Interactive shooter with one objective: Kill as many ships as possible with 10 bullets. Built with Javascript and HTML5 Canvas.</p>
+							<p>Interactive shooter with one objective: Kill as many ships as possible with 10 bullets. Built with Javascript and HTML5 Canvas. stat</p>
 							<ul class="actions">
 								<li><a href="#" class="button">More</a></li>
 							</ul>
