add images for projects

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 					<!-- <p>Ante nunc accumsan et aclacus nascetur ac ante amet sapien sed.</p> -->
 					<div class="row 150%">
 						<div class="4u 12u$(medium)">
-							<span class="image fit"><img src="images/pic02.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/fullstack_pic.png" alt="" /></span>
 							<h3>ExtraLarge</h3>
 							<p>Single page web application that allows users to read and publish content. Built with Rails, React, Redux, Javascript, and PostgreSQL.</p>
 							<ul class="actions">
@@ -106,7 +106,7 @@
 							</ul>
 						</div>
 						<div class="4u 12u$(medium)">
-							<span class="image fit"><img src="images/pic03.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/shoot.png" alt="" /></span>
 							<h3>Shoot-10</h3>
 							<p>Interactive shooter with one objective: Kill as many ships as possible with 10 bullets. Built with Javascript and HTML5 Canvas. stat</p>
 							<ul class="actions">
@@ -114,7 +114,7 @@
 							</ul>
 						</div>
 						<div class="4u$ 12u$(medium)">
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/rubyrecord.png" alt="" /></span>
 							<h3>Ruby Record</h3>
 							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
 							<ul class="actions">
@@ -129,13 +129,13 @@
 			<section id="four" class="main style2 special">
 				<div class="container">
 					<header class="major">
-						<h2>Ipsum feugiat consequat?</h2>
+						<h2>Get in touch</h2>
 					</header>
-					<p>Sed lacus nascetur ac ante amet sapien.</p>
-					<ul class="actions uniform">
+					<p>chrislee92@gmail.com</p>
+					<!-- <ul class="actions uniform">
 						<li><a href="#" class="button special">Sign Up</a></li>
 						<li><a href="#" class="button">Learn More</a></li>
-					</ul>
+					</ul> -->
 				</div>
 			</section>
 
@@ -469,7 +469,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<li><a href="#" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
-					<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					<li>&copy; Chris Lee</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 				</ul>
 			</section>
 
