Add links to projects

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 							<h3>ExtraLarge</h3>
 							<p>Single page web application that allows users to read and publish content. Built with Rails, React, Redux, Javascript, and PostgreSQL.</p>
 							<ul class="actions">
-								<li><a href="#" class="button">More</a></li>
+								<li><a href="http://www.extralarge.space/#/" class="button">Live</a></li>
 							</ul>
 						</div>
 						<div class="4u 12u$(medium)">
@@ -110,7 +110,7 @@
 							<h3>Shoot-10</h3>
 							<p>Interactive shooter with one objective: Kill as many ships as possible with 10 bullets. Built with Javascript and HTML5 Canvas. stat</p>
 							<ul class="actions">
-								<li><a href="#" class="button">More</a></li>
+								<li><a href="https://realchrislee.github.io/Shoot-10/" class="button">Live</a></li>
 							</ul>
 						</div>
 						<div class="4u$ 12u$(medium)">
@@ -118,7 +118,7 @@
 							<h3>Ruby Record</h3>
 							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
 							<ul class="actions">
-								<li><a href="#" class="button">More</a></li>
+								<li><a href="https://github.com/realchrislee/Ruby-Record" class="button">GitHub</a></li>
 							</ul>
 						</div>
 					</div>
