--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 						<div class="4u 12u$(medium)">
 							<span class="image fit"><img src="images/shoot.png" alt="" /></span>
 							<h3>Shoot-10</h3>
-							<p>Interactive shooter with one objective: Kill as many ships as possible with 10 bullets. Built with Javascript and HTML5 Canvas. stat</p>
+							<p>Interactive shooter with one objective: Kill as many ships as possible with 10 bullets. Built with Javascript and HTML5 Canvas.</p>
 							<ul class="actions">
 								<li><a href="https://realchrislee.github.io/Shoot-10/" class="button">Live</a></li>
 							</ul>
@@ -116,7 +116,7 @@
 						<div class="4u$ 12u$(medium)">
 							<span class="image fit"><img src="images/rubyrecord.png" alt="" /></span>
 							<h3>Ruby Record</h3>
-							<p>Adipiscing a commodo ante nunc magna lorem et interdum mi ante nunc lobortis non amet vis sed volutpat et nascetur.</p>
+							<p>Uses Ruby to translate user actions into SQL queries interacting with the database.</p>
 							<ul class="actions">
 								<li><a href="https://github.com/realchrislee/Ruby-Record" class="button">GitHub</a></li>
 							</ul>
