--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 							<h3>ExtraLarge</h3>
 							<p>Single page web application that allows users to read and publish content. Built with Rails, React, Redux, Javascript, and PostgreSQL.</p>
 							<ul class="actions">
-								<li><a href="http://www.extralarge.space/#/" class="button">Live</a></li>
+								<li><a target='_blank' href="http://www.extralarge.space/#/" class="button">Live</a></li>
 							</ul>
 						</div>
 						<div class="4u 12u$(medium)">
@@ -110,15 +110,15 @@
 							<h3>Shoot-10</h3>
 							<p>Interactive shooter with one objective: Kill as many ships as possible with 10 bullets. Built with Javascript and HTML5 Canvas.</p>
 							<ul class="actions">
-								<li><a href="https://realchrislee.github.io/Shoot-10/" class="button">Live</a></li>
+								<li><a target='_blank' href="https://realchrislee.github.io/Shoot-10/" class="button">Live</a></li>
 							</ul>
 						</div>
 						<div class="4u$ 12u$(medium)">
 							<span class="image fit"><img src="images/rubyrecord.png" alt="" /></span>
 							<h3>Ruby Record</h3>
-							<p>Uses Ruby to translate user actions into SQL queries interacting with the database.</p>
+							<p>Uses Ruby to translate user actions into SQL queries interacting with the database.	</p>
 							<ul class="actions">
-								<li><a href="https://github.com/realchrislee/Ruby-Record" class="button">GitHub</a></li>
+								<li><a target='_blank' href="https://github.com/realchrislee/Ruby-Record" class="button">GitHub</a></li>
 							</ul>
 						</div>
 					</div>
