Add links to project pictures

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 					<!-- <p>Ante nunc accumsan et aclacus nascetur ac ante amet sapien sed.</p> -->
 					<div class="row 150%">
 						<div class="4u 12u$(medium)">
-							<span class="image fit"><img src="images/fullstack_pic.png" alt="" /></span>
+							<span class="image fit"><a target='_blank' href='http://www.extralarge.space/#/'><img src="images/fullstack_pic.png" alt="" /></a></span>
 							<h3>ExtraLarge</h3>
 							<p>Single page web application that allows users to read and publish content. Built with Rails, React, Redux, Javascript, and PostgreSQL.</p>
 							<ul class="actions">
@@ -106,7 +106,7 @@
 							</ul>
 						</div>
 						<div class="4u 12u$(medium)">
-							<span class="image fit"><img src="images/shoot.png" alt="" /></span>
+							<span class="image fit"><a target='_blank' href='https://realchrislee.github.io/Shoot-10/'><img src="images/shoot.png" alt="" /></a></span>
 							<h3>Shoot-10</h3>
 							<p>Interactive shooter with one objective: Kill as many ships as possible with 10 bullets. Built with Javascript and HTML5 Canvas.</p>
 							<ul class="actions">
@@ -114,7 +114,7 @@
 							</ul>
 						</div>
 						<div class="4u$ 12u$(medium)">
-							<span class="image fit"><img src="images/rubyrecord.png" alt="" /></span>
+							<span class="image fit"><a target='_blank' href='https://github.com/realchrislee/Ruby-Record'><img src="images/rubyrecord.png" alt="" /></a></span>
 							<h3>Ruby Record</h3>
 							<p>Uses Ruby to translate user actions into SQL queries interacting with the database.	</p>
 							<ul class="actions">
