--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 								world. I'm always learning new ways to improve my skills and love working with smart
 								people. <p/><p> Let's make this world great!</p>
 								<div class='about-links'>
-									Github LinkedIn
+									<a href='https://github.com/realchrislee' >Github</a> <a href='https://www.linkedin.com/in/clee92/' >LinkedIn </a>	
 								</div>
 						</div>
 						<div class="6u$ 12u$(medium) important(medium)">
