Add link to footer icon

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 								world. I'm always learning new ways to improve my skills and love working with smart
 								people. <p/><p> Let's make this world great!</p>
 								<div class='about-links'>
-									<a href='https://github.com/realchrislee' >Github</a> <a href='https://www.linkedin.com/in/clee92/' >LinkedIn </a>	
+									<a href='https://github.com/realchrislee' >Github</a> <a href='https://www.linkedin.com/in/clee92/' >LinkedIn </a>
 								</div>
 						</div>
 						<div class="6u$ 12u$(medium) important(medium)">
@@ -465,7 +465,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<!-- <li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
 					<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
 					<li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li> -->
-					<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+					<li><a href="https://github.com/realchrislee" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
 					<li><a href="#" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
