--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 								coding that I found a way to turn my passion into a
 								skill that can make a positive impact on the
 								world. I'm always learning new ways to improve my skills and love working with smart
-								people. <p/><p> Let's make this world great!</p>
+								people. <p/>
 								<div class='about-links'>
 									<a target='_blank' href='https://github.com/realchrislee' >Github</a> | <a target='_blank' href='https://www.linkedin.com/in/clee92/' >LinkedIn </a>
 								</div>
