Lay down email form skeleton

--- a/index.html
+++ b/index.html
@@ -468,8 +468,16 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
 					<li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li> -->
 					<li><a target='_blank' href="https://github.com/realchrislee" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="#" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
+					<!-- <li><a href="#modal" class="icon alt fa-envelope"><span class="label">Email</span></a></li> -->
 				</ul>
+				<!-- <div id='modal' class='email-modal'> -->
+						<form class="modal" action="https://formspree.io/chrislee92@gmail.com" method="post">
+							<input type="email" name="_replyto" placeholder="Your email">
+							<textarea name="message" rows="8" cols="80" placeholder="Your message"></textarea>
+							<input type="submit" name="" value="Send">
+						</form>
+					</div>
+				<!-- </div> -->
 				<ul class="copyright">
 					<li>&copy; Chris Lee</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 				</ul>
