Add formspree for emails

--- a/index.html
+++ b/index.html
@@ -471,10 +471,10 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<!-- <li><a href="#modal" class="icon alt fa-envelope"><span class="label">Email</span></a></li> -->
 				</ul>
 				<!-- <div id='modal' class='email-modal'> -->
-						<form class="modal" action="https://formspree.io/chrislee92@gmail.com" method="post">
-							<input type="email" name="_replyto" placeholder="Your email">
-							<textarea name="message" rows="8" cols="80" placeholder="Your message"></textarea>
-							<input type="submit" name="" value="Send">
+						<form action="https://formspree.io/chrislee92@gmail.com" method="post">
+							<input class='sender' type="email" name="_replyto" placeholder="Your email">
+							<textarea class='message' name="message" rows="8" cols="80" placeholder="Your message"></textarea>
+							<input class='submit' type="submit" name="" value="Send">
 						</form>
 					</div>
 				<!-- </div> -->
