--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="shortcut icon" type="image/png" href="images/favicon.ico">
+		<link rel="shortcut icon" type="image/png" href="images/favicon2.ico">
 		<!-- [if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif] -->
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
@@ -59,7 +59,7 @@
 						<!-- Intro -->
 							<article id="about">
 								<h2 class="major">About</h2>
-								<span class="image main"><img src="images/linkedin-prof-pic.png" alt="" /></span>
+								<span class="image main"><img src="images/prof-pic.jpg" alt="" /></span>
 								<p>Hi, I'm a web developer working out of NYC with
 									experience in Ruby on Rails, Javascript, React and
 									Redux. I've always had a love for solving puzzles and
